@startuml

package paper <<Aggregate>> {
    class Paper <<Aggregate Root>> {
        id: String
        teacherId: String
        blankQuizIds: Set<String>
        reassemble()
        {static} assemble(): Paper
    }
}

package examination <<Aggregate>>  {

    class Examination <<Aggregate Root>> {
        id: String
        startDate: LocalDateTime
        endDate: LocalDateTime
        {static} create(): Examination
    }

    class "Paper" as p <<Value Object>>{
        id: String
        teacherId: String
    }

    class "BlankQuiz" as b <<Value Object>> {
        id: String
        description: String
        referenceAnswer: String
        score: Int
    }

    Examination "1" *-- "1" p
    p "1" *-- "5...20" b
}

package answerSheet <<Aggregate>> {
    class AnswerSheet <<Aggregate Root>> {
        id: String
        studentId: String
        examinationId: String
        submit()
        handIn()
        review()
        {static} assign(): AnswerSheet
    }

    class "Answer" <<Entity>> {
        id: String
        content: String
    }
    AnswerSheet "1" *-- "5...20" Answer
}

@enduml
